@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1994, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1994, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,22 +31,21 @@ import org.jspecify.annotations.Nullable;
 /**
  * Thrown to indicate that the code has attempted to cast an object
  * to a subclass of which it is not an instance. For example, the
- * following code generates a <code>ClassCastException</code>:
+ * following code generates a {@code ClassCastException}:
  * <blockquote><pre>
- *     Object x = new Integer(0);
+ *     Object x = Integer.valueOf(0);
  *     System.out.println((String)x);
  * </pre></blockquote>
  *
- * @author  unascribed
  * @since   1.0
  */
 @NullMarked
-public
-class ClassCastException extends RuntimeException {
+public class ClassCastException extends RuntimeException {
+    @java.io.Serial
     private static final long serialVersionUID = -9223365651070458532L;
 
     /**
-     * Constructs a <code>ClassCastException</code> with no detail message.
+     * Constructs a {@code ClassCastException} with no detail message.
      */
     
     public ClassCastException() {
@@ -54,7 +53,7 @@ class ClassCastException extends RuntimeException {
     }
 
     /**
-     * Constructs a <code>ClassCastException</code> with the specified
+     * Constructs a {@code ClassCastException} with the specified
      * detail message.
      *
      * @param   s   the detail message.
