@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,7 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.spi.LocaleServiceProvider;
-import sun.util.logging.PlatformLogger;
+import java.util.stream.Stream;
 
 /**
  * An instance of this class holds a set of the third party implementations of a particular
@@ -50,7 +50,7 @@ import sun.util.logging.PlatformLogger;
 public final class LocaleServiceProviderPool {
 
     /**
-     * A Map that holds singleton instances of this class.  Each instance holds a
+     * A Map that holds singleton instances of this class. Each instance holds a
      * set of provider implementations of a particular locale sensitive service.
      */
     private static final ConcurrentMap<Class<? extends LocaleServiceProvider>, LocaleServiceProviderPool> poolOfPools =
@@ -63,7 +63,7 @@ public final class LocaleServiceProviderPool {
         new ConcurrentHashMap<>();
 
     /**
-     * Available locales for this locale sensitive service.  This also contains
+     * Available locales for this locale sensitive service. This also contains
      * JRE's available locales
      */
     private Set<Locale> availableLocales = null;
@@ -121,11 +121,6 @@ public final class LocaleServiceProviderPool {
         providerClass = c;
     }
 
-    static void config(Class<? extends Object> caller, String message) {
-        PlatformLogger logger = PlatformLogger.getLogger(caller.getCanonicalName());
-        logger.config(message);
-    }
-
     /**
      * Lazy loaded set of available locales.
      * Loading all locales is a very long operation.
@@ -144,7 +139,6 @@ public final class LocaleServiceProviderPool {
                     LocaleServiceProviderPool.getPool(c);
                 all.addAll(pool.getAvailableLocaleSet());
             }
-
             allAvailableLocales = all.toArray(new Locale[0]);
         }
 
@@ -154,22 +148,31 @@ public final class LocaleServiceProviderPool {
     }
 
     /**
-     * Returns an array of available locales for all the provider classes.
+     * {@return a stream of the available locales for all the provider classes}
+     *
+     * This stream is constructed from all the locales that are provided by each
+     * provider, including the JRE.
+     */
+    public static Stream<Locale> streamAllAvailableLocales() {
+        return Arrays.stream(AllAvailableLocales.allAvailableLocales);
+    }
+
+    /**
+     * {@return an array of the available locales for all the provider classes}
+     *
      * This array is a merged array of all the locales that are provided by each
      * provider, including the JRE.
-     *
-     * @return an array of the available locales for all provider classes
      */
     public static Locale[] getAllAvailableLocales() {
         return AllAvailableLocales.allAvailableLocales.clone();
     }
 
     /**
-     * Returns an array of available locales.  This array is a
+     * {@return an array of the available locales}
+     *
+     * This array is a
      * merged array of all the locales that are provided by each
      * provider, including the JRE.
-     *
-     * @return an array of the available locales
      */
     public Locale[] getAvailableLocales() {
         Set<Locale> locList = new HashSet<>();
@@ -249,7 +252,7 @@ public final class LocaleServiceProviderPool {
      * @param getter an object on which getObject() method
      *     is called to obtain the provider's instance.
      * @param locale the given locale that is used as the starting one
-     * @param isObjectProvider flag designating object provder or not
+     * @param isObjectProvider flag designating object provider or not
      * @param key the key string for name providers
      * @param params provider specific parameters
      * @return provider's instance, or null.
@@ -282,9 +285,10 @@ public final class LocaleServiceProviderPool {
                 if (providersObj != null) {
                     return providersObj;
                 } else if (isObjectProvider) {
-                    config(LocaleServiceProviderPool.class,
-                        "A locale sensitive service provider returned null for a localized objects,  which should not happen.  provider: "
-                            + lsp + " locale: " + locale);
+                    System.getLogger(LocaleServiceProviderPool.class.getCanonicalName())
+                            .log(System.Logger.Level.INFO,
+                           "A locale sensitive service object provider returned null, " +
+                                "which should not happen. Provider: " + lsp + " Locale: " + locale);
                 }
             }
         }
@@ -341,9 +345,8 @@ public final class LocaleServiceProviderPool {
         // ResourceBundle.Control.getCandidateLocales. The result
         // returned by getCandidateLocales are already normalized
         // (no extensions) for service look up.
-        List<Locale> lookupLocales = Control.getNoFallbackControl(Control.FORMAT_DEFAULT)
+        return Control.getNoFallbackControl(Control.FORMAT_DEFAULT)
                                             .getCandidateLocales("", locale);
-        return lookupLocales;
     }
 
     /**
@@ -370,11 +373,12 @@ public final class LocaleServiceProviderPool {
                 // should have well-formed fields except
                 // for ja_JP_JP and th_TH_TH. Therefore,
                 // it should never enter in this catch clause.
-                config(LocaleServiceProviderPool.class,
-                       "A locale(" + locale + ") has non-empty extensions, but has illformed fields.");
+                System.getLogger(LocaleServiceProviderPool.class.getCanonicalName())
+                    .log(System.Logger.Level.INFO,
+                        "A locale(" + locale + ") has non-empty extensions, but has illformed fields.");
 
                 // Fallback - script field will be lost.
-                lookupLocale = new Locale(locale.getLanguage(), locale.getCountry(), locale.getVariant());
+                lookupLocale = Locale.of(locale.getLanguage(), locale.getCountry(), locale.getVariant());
             }
         }
         return lookupLocale;
@@ -402,9 +406,9 @@ public final class LocaleServiceProviderPool {
          * @param params provider specific params
          * @return localized object from the provider
          */
-        public S getObject(P lsp,
-                           Locale locale,
-                           String key,
-                           Object... params);
+        S getObject(P lsp,
+                    Locale locale,
+                    String key,
+                    Object... params);
     }
 }
