@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,34 +25,21 @@
 
 package jdk.javadoc.internal.doclets.toolkit.util;
 
-import org.checkerframework.dataflow.qual.Pure;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
-import javax.lang.model.element.Element;
-import javax.lang.model.element.ExecutableElement;
-import javax.lang.model.element.ModuleElement;
-import javax.lang.model.element.PackageElement;
-import javax.lang.model.element.TypeElement;
-import javax.lang.model.type.TypeMirror;
-
-import com.sun.source.doctree.AttributeTree;
-import com.sun.source.doctree.AttributeTree.ValueKind;
 import com.sun.source.doctree.AuthorTree;
 import com.sun.source.doctree.BlockTagTree;
 import com.sun.source.doctree.CommentTree;
 import com.sun.source.doctree.DeprecatedTree;
 import com.sun.source.doctree.DocCommentTree;
 import com.sun.source.doctree.DocTree;
-import com.sun.source.doctree.EndElementTree;
-import com.sun.source.doctree.EntityTree;
+import com.sun.source.doctree.EscapeTree;
 import com.sun.source.doctree.IdentifierTree;
+import com.sun.source.doctree.InheritDocTree;
 import com.sun.source.doctree.InlineTagTree;
 import com.sun.source.doctree.LinkTree;
 import com.sun.source.doctree.LiteralTree;
 import com.sun.source.doctree.ParamTree;
 import com.sun.source.doctree.ProvidesTree;
+import com.sun.source.doctree.RawTextTree;
 import com.sun.source.doctree.ReferenceTree;
 import com.sun.source.doctree.ReturnTree;
 import com.sun.source.doctree.SeeTree;
@@ -60,7 +47,7 @@ import com.sun.source.doctree.SerialDataTree;
 import com.sun.source.doctree.SerialFieldTree;
 import com.sun.source.doctree.SerialTree;
 import com.sun.source.doctree.SinceTree;
-import com.sun.source.doctree.StartElementTree;
+import com.sun.source.doctree.SpecTree;
 import com.sun.source.doctree.TextTree;
 import com.sun.source.doctree.ThrowsTree;
 import com.sun.source.doctree.UnknownBlockTagTree;
@@ -72,485 +59,325 @@ import com.sun.source.util.DocTrees;
 import com.sun.source.util.SimpleDocTreeVisitor;
 import com.sun.source.util.TreePath;
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
+import jdk.javadoc.internal.doclets.toolkit.util.DocFinder.Result;
 
-import static com.sun.source.doctree.DocTree.Kind.*;
+import javax.lang.model.element.Element;
+import javax.lang.model.element.ElementKind;
+import javax.lang.model.element.ExecutableElement;
+import javax.lang.model.element.ModuleElement;
+import javax.lang.model.element.PackageElement;
+import javax.lang.model.element.TypeElement;
+import javax.lang.model.type.TypeKind;
+import javax.lang.model.type.TypeMirror;
+import java.util.List;
+import java.util.Optional;
+
+import static com.sun.source.doctree.DocTree.Kind.SEE;
+import static com.sun.source.doctree.DocTree.Kind.SERIAL_FIELD;
 
 /**
- *  A utility class.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
+ * A utility class.
  */
 public class CommentHelper {
+    private final BaseConfiguration configuration;
     public final TreePath path;
-    public final DocCommentTree dctree;
+    public final DocCommentTree dcTree;
     public final Element element;
-    private Element overriddenElement;
 
-    public static final String SPACER = " ";
-
-    public CommentHelper(BaseConfiguration configuration, Element element, TreePath path, DocCommentTree dctree) {
-        //this.configuration = configuration;
+    /**
+     * Creates a utility class to encapsulate the contextual information for a doc comment tree.
+     *
+     * @param configuration the configuration
+     * @param element       the element for which this is a doc comment
+     * @param path          the path for the element
+     * @param dcTree        the doc comment
+     */
+    public CommentHelper(BaseConfiguration configuration, Element element, TreePath path, DocCommentTree dcTree) {
+        this.configuration = configuration;
         this.element = element;
         this.path = path;
-        this.dctree = dctree;
+        this.dcTree = dcTree;
     }
 
-    public void setOverrideElement(Element ove) {
-        if (this.element == ove) {
-            throw new AssertionError("cannot set given element as overriden element");
-        }
-        overriddenElement = ove;
-    }
-
-    @SuppressWarnings("fallthrough")
     public String getTagName(DocTree dtree) {
-        switch (dtree.getKind()) {
-            case AUTHOR:
-            case DEPRECATED:
-            case PARAM:
-            case PROVIDES:
-            case RETURN:
-            case SEE:
-            case SERIAL_DATA:
-            case SERIAL_FIELD:
-            case THROWS:
-            case UNKNOWN_BLOCK_TAG:
-            case USES:
-            case VERSION:
-                return ((BlockTagTree)dtree).getTagName();
-            case UNKNOWN_INLINE_TAG:
-                return ((InlineTagTree)dtree).getTagName();
-            case ERRONEOUS:
-                return "erroneous";
-            default:
-                return dtree.getKind().tagName;
-        }
+        return switch (dtree.getKind()) {
+            case AUTHOR, DEPRECATED, PARAM, PROVIDES, RETURN, SEE, SERIAL_DATA, SERIAL_FIELD,
+                    THROWS, UNKNOWN_BLOCK_TAG, USES, VERSION ->
+                    ((BlockTagTree) dtree).getTagName();
+            case UNKNOWN_INLINE_TAG ->
+                    ((InlineTagTree) dtree).getTagName();
+            case ERRONEOUS ->
+                    "erroneous";
+            default ->
+                    dtree.getKind().tagName;
+        };
     }
 
-    @Pure
-    public boolean isTypeParameter(DocTree dtree) {
-        if (dtree.getKind() == PARAM) {
-            return ((ParamTree)dtree).isTypeParameter();
-        }
-        return false;
+    public String getParameterName(ParamTree p) {
+        return p.getName().getName().toString();
     }
 
-    public String getParameterName(DocTree dtree) {
-        if (dtree.getKind() == PARAM) {
-            return ((ParamTree) dtree).getName().toString();
-        } else {
-            return null;
-        }
-    }
-
-    Element getElement(BaseConfiguration c, ReferenceTree rtree) {
+    Element getElement(ReferenceTree rtree) {
+        // We need to lookup type variables and other types
+        Utils utils = configuration.utils;
         // likely a synthesized tree
         if (path == null) {
-            TypeMirror symbol = c.utils.getSymbol(rtree.getSignature());
+            // NOTE: this code path only supports module/package/type signatures
+            //       and not member signatures. For more complete support,
+            //       set a suitable path and avoid this branch.
+            TypeMirror symbol = utils.getSymbol(rtree.getSignature());
             if (symbol == null) {
                 return null;
             }
-            return  c.docEnv.getTypeUtils().asElement(symbol);
+            return configuration.docEnv.getTypeUtils().asElement(symbol);
         }
-        // case A: the element contains no comments associated and
-        // the comments need to be copied from ancestor
-        // case B: the element has @inheritDoc, then the ancestral comment
-        // as appropriate has to be copied over.
-
-        // Case A.
-        if (dctree == null && overriddenElement != null) {
-            CommentHelper ovch = c.utils.getCommentHelper(overriddenElement);
-            return ovch.getElement(c, rtree);
-        }
-        if (dctree == null) {
-            return null;
-        }
-        DocTreePath docTreePath = DocTreePath.getPath(path, dctree, rtree);
+        DocTreePath docTreePath = getDocTreePath(rtree);
         if (docTreePath == null) {
-            // Case B.
-            if (overriddenElement != null) {
-                CommentHelper ovch = c.utils.getCommentHelper(overriddenElement);
-                return ovch.getElement(c, rtree);
-            }
             return null;
         }
-        DocTrees doctrees = c.docEnv.getDocTrees();
-        return doctrees.getElement(docTreePath);
+        DocTrees doctrees = configuration.docEnv.getDocTrees();
+        // Workaround for JDK-8284193
+        // DocTrees.getElement(DocTreePath) returns javac-internal Symbols
+        var e = doctrees.getElement(docTreePath);
+        return e == null || e.getKind() == ElementKind.CLASS && e.asType().getKind() != TypeKind.DECLARED ? null : e;
     }
 
-    public Element getException(BaseConfiguration c, DocTree dtree) {
-        if (dtree.getKind() == THROWS || dtree.getKind() == EXCEPTION) {
-            ThrowsTree tt = (ThrowsTree)dtree;
-            ReferenceTree exceptionName = tt.getExceptionName();
-            return getElement(c, exceptionName);
+    public TypeMirror getType(ReferenceTree rtree) {
+        DocTreePath docTreePath = getDocTreePath(rtree);
+        if (docTreePath != null) {
+            DocTrees docTrees = configuration.docEnv.getDocTrees();
+            return docTrees.getType(docTreePath);
         }
         return null;
     }
 
-    public List<? extends DocTree> getDescription(BaseConfiguration c, DocTree dtree) {
-        return getTags(c, dtree);
+    public Element getException(ThrowsTree tt) {
+        return getElement(tt.getExceptionName());
     }
 
-    public String getText(List<? extends DocTree> list) {
+    public List<? extends DocTree> getDescription(DocTree dtree) {
+        return getTags(dtree);
+    }
+
+    public TypeElement getReferencedClass(Element e) {
+        Utils utils = configuration.utils;
+        if (e == null) {
+            return null;
+        } else if (utils.isTypeElement(e)) {
+            return (TypeElement) e;
+        } else if (!utils.isPackage(e) && !utils.isModule(e)) {
+            return utils.getEnclosingTypeElement(e);
+        }
+        return null;
+    }
+
+    public String getReferencedModuleName(String signature) {
+        if (signature == null || signature.contains("#") || signature.contains("(")) {
+            return null;
+        }
+        int n = signature.indexOf("/");
+        return (n == -1) ? signature : signature.substring(0, n);
+    }
+
+    public Element getReferencedMember(DocTree dtree) {
+        Element e = getReferencedElement(dtree);
+        return getReferencedMember(e);
+    }
+
+    public Element getReferencedMember(Element e) {
+        Utils utils = configuration.utils;
+        if (e == null) {
+            return null;
+        } else if (utils.isTypeParameterElement(e)) {
+            // Return the enclosing member for type parameters of generic methods or constructors.
+            Element encl = e.getEnclosingElement();
+            if (utils.isExecutableElement(encl)) {
+                return encl;
+            }
+        }
+        return (utils.isExecutableElement(e) || utils.isVariableElement(e)) ? e : null;
+    }
+
+    public String getReferencedFragment(String signature) {
+        if (signature == null) {
+            return null;
+        }
+        int n = signature.indexOf("#");
+        return (n == -1) ? null : signature.substring(n + 1);
+    }
+
+    public PackageElement getReferencedPackage(Element e) {
+        if (e != null) {
+            Utils utils = configuration.utils;
+            return utils.containingPackage(e);
+        }
+        return null;
+    }
+
+    public ModuleElement getReferencedModule(Element e) {
+        if (e != null && configuration.utils.isModule(e)) {
+            return (ModuleElement) e;
+        }
+        return null;
+    }
+
+    public List<? extends DocTree> getFirstSentenceTrees(List<? extends DocTree> body) {
+        return configuration.docEnv.getDocTrees().getFirstSentence(body);
+    }
+
+    public Element getReferencedElement(DocTree dtree) {
+        return new ReferenceDocTreeVisitor<Element>() {
+            @Override
+            public Element visitReference(ReferenceTree node, Void p) {
+                return getElement(node);
+            }
+        }.visit(dtree, null);
+    }
+
+    public TypeMirror getReferencedType(DocTree dtree) {
+        return new ReferenceDocTreeVisitor<TypeMirror>() {
+            @Override
+            public TypeMirror visitReference(ReferenceTree node, Void p) {
+                return getType(node);
+            }
+        }.visit(dtree, null);
+    }
+
+    public TypeElement getServiceType(DocTree dtree) {
+        Element e = getReferencedElement(dtree);
+        if (e != null) {
+            Utils utils = configuration.utils;
+            return utils.isTypeElement(e) ? (TypeElement) e : null;
+        }
+        return null;
+    }
+
+    /**
+     * {@return the normalized signature from a {@code ReferenceTree}}
+     */
+    public String getReferencedSignature(DocTree dtree) {
+        return new ReferenceDocTreeVisitor<String>() {
+            @Override
+            public String visitReference(ReferenceTree node, Void p) {
+                return normalizeSignature(node.getSignature());
+            }
+        }.visit(dtree, null);
+    }
+
+    @SuppressWarnings("fallthrough")
+    private static String normalizeSignature(String sig) {
+        if (sig == null
+                || (!sig.contains(" ") && !sig.contains("\n")
+                 && !sig.contains("\r") && !sig.endsWith("/"))) {
+            return sig;
+        }
         StringBuilder sb = new StringBuilder();
-        for (DocTree dt : list) {
-            sb.append(getText0(dt));
+        char lastChar = 0;
+        for (int i = 0; i < sig.length(); i++) {
+            char ch = sig.charAt(i);
+            switch (ch) {
+                case '\n':
+                case '\r':
+                case '\f':
+                case '\t':
+                case ' ':
+                    // Add at most one space char, or none if it isn't needed
+                    switch (lastChar) {
+                        case 0:
+                        case'(':
+                        case'<':
+                        case ' ':
+                        case '.':
+                            break;
+                        default:
+                            sb.append(' ');
+                            lastChar = ' ';
+                            break;
+                    }
+                    break;
+                case ',':
+                case '>':
+                case ')':
+                case '.':
+                    // Remove preceding space character
+                    if (lastChar == ' ') {
+                        sb.setLength(sb.length() - 1);
+                    }
+                    // fallthrough
+                default:
+                    sb.append(ch);
+                    lastChar = ch;
+            }
+        }
+        // Delete trailing slash
+        if (lastChar == '/') {
+            sb.setLength(sb.length() - 1);
         }
         return sb.toString();
     }
 
-    public String getText(DocTree dt) {
-        return getText0(dt).toString();
-    }
-
-    private StringBuilder getText0(DocTree dt) {
-        final StringBuilder sb = new StringBuilder();
-        new SimpleDocTreeVisitor<Void, Void>() {
-            @Override
-            public Void visitAttribute(AttributeTree node, Void p) {
-                sb.append(SPACER).append(node.getName());
-                if (node.getValueKind() == ValueKind.EMPTY) {
-                    return null;
-                }
-
-                sb.append("=");
-                String quote;
-                switch (node.getValueKind()) {
-                    case DOUBLE:
-                        quote = "\"";
-                        break;
-                    case SINGLE:
-                        quote = "\'";
-                        break;
-                    default:
-                        quote = "";
-                        break;
-                }
-                sb.append(quote);
-                node.getValue().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                sb.append(quote);
-                return null;
+    private static class ReferenceDocTreeVisitor<R> extends SimpleDocTreeVisitor<R, Void> {
+        @Override
+        public R visitSee(SeeTree node, Void p) {
+            for (DocTree dt : node.getReference()) {
+                return visit(dt, null);
             }
-
-            @Override
-            public Void visitEndElement(EndElementTree node, Void p) {
-                sb.append("</")
-                        .append(node.getName())
-                        .append(">");
-                return null;
-            }
-
-            @Override
-            public Void visitEntity(EntityTree node, Void p) {
-                sb.append(node.toString());
-                return null;
-            }
-
-            @Override
-            public Void visitLink(LinkTree node, Void p) {
-                if (node.getReference() == null) {
-                    return null;
-                }
-
-                node.getReference().accept(this, null);
-                node.getLabel().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                return null;
-            }
-
-            @Override
-            public Void visitLiteral(LiteralTree node, Void p) {
-                if (node.getKind() == CODE) {
-                    sb.append("<").append(node.getKind().tagName).append(">");
-                }
-                sb.append(node.getBody().toString());
-                if (node.getKind() == CODE) {
-                    sb.append("</").append(node.getKind().tagName).append(">");
-                }
-                return null;
-            }
-
-            @Override
-            public Void visitReference(ReferenceTree node, Void p) {
-                sb.append(node.getSignature());
-                return null;
-            }
-
-            @Override
-            public Void visitSee(SeeTree node, Void p) {
-                node.getReference().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                return null;
-            }
-
-            @Override
-            public Void visitSerial(SerialTree node, Void p) {
-                node.getDescription().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                return null;
-            }
-
-            @Override
-            public Void visitStartElement(StartElementTree node, Void p) {
-                sb.append("<");
-                sb.append(node.getName());
-                node.getAttributes().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                sb.append((node.isSelfClosing() ? "/>" : ">"));
-                return null;
-            }
-
-            @Override
-            public Void visitText(TextTree node, Void p) {
-                sb.append(node.getBody());
-                return null;
-            }
-
-            @Override
-            public Void visitUnknownBlockTag(UnknownBlockTagTree node, Void p) {
-                node.getContent().stream().forEach((dt) -> {
-                    dt.accept(this, null);
-                });
-                return null;
-            }
-
-            @Override
-            public Void visitValue(ValueTree node, Void p) {
-                return node.getReference().accept(this, null);
-            }
-
-            @Override
-            protected Void defaultAction(DocTree node, Void p) {
-                sb.append(node.toString());
-                return null;
-            }
-        }.visit(dt, null);
-        return sb;
-    }
-
-    public String getLabel(BaseConfiguration c, DocTree dtree) {
-        return new SimpleDocTreeVisitor<String, Void>() {
-            @Override
-            public String visitLink(LinkTree node, Void p) {
-                StringBuilder sb = new StringBuilder();
-                node.getLabel().stream().forEach((dt) -> {
-                    sb.append(getText(dt));
-                });
-                return sb.toString();
-            }
-
-            @Override
-            public String visitSee(SeeTree node, Void p) {
-                StringBuilder sb = new StringBuilder();
-                node.getReference().stream().filter((dt) -> (c.utils.isText(dt))).forEach((dt) -> {
-                    sb.append(((TextTree)dt).getBody());
-                });
-                return sb.toString();
-            }
-
-            @Override
-            protected String defaultAction(DocTree node, Void p) {
-                return "";
-            }
-        }.visit(dtree, null);
-    }
-
-    public TypeElement getReferencedClass(BaseConfiguration c, DocTree dtree) {
-        Element e = getReferencedElement(c, dtree);
-        if (e == null) {
-            return null;
-        } else if (c.utils.isTypeElement(e)) {
-            return (TypeElement) e;
-        } else if (!c.utils.isPackage(e)) {
-            return c.utils.getEnclosingTypeElement(e);
-        }
-        return null;
-    }
-
-    public String getReferencedClassName(BaseConfiguration c, DocTree dtree) {
-        Element e = getReferencedClass(c, dtree);
-        if (e != null) {
-            return c.utils.isTypeElement(e) ? c.utils.getSimpleName(e) : null;
-        }
-        String s = getReferencedSignature(dtree);
-        if (s == null) {
             return null;
         }
-        int n = s.indexOf("#");
-        return (n == -1) ? s : s.substring(0, n);
-    }
 
-    public Element getReferencedMember(BaseConfiguration c, DocTree dtree) {
-        Element e = getReferencedElement(c, dtree);
-        if (e == null) {
+        @Override
+        public R visitInheritDoc(InheritDocTree node, Void p) {
+            return visit(node.getSupertype(), p);
+        }
+
+        @Override
+        public R visitLink(LinkTree node, Void p) {
+            return visit(node.getReference(), null);
+        }
+
+        @Override
+        public R visitProvides(ProvidesTree node, Void p) {
+            return visit(node.getServiceType(), null);
+        }
+
+        @Override
+        public R visitValue(ValueTree node, Void p) {
+            return visit(node.getReference(), null);
+        }
+
+        @Override
+        public R visitSerialField(SerialFieldTree node, Void p) {
+            return visit(node.getType(), null);
+        }
+
+        @Override
+        public R visitUses(UsesTree node, Void p) {
+            return visit(node.getServiceType(), null);
+        }
+
+        @Override
+        protected R defaultAction(DocTree node, Void p) {
             return null;
         }
-        return (c.utils.isExecutableElement(e) || c.utils.isVariableElement(e)) ? e : null;
-    }
-
-    public String getReferencedMemberName(DocTree dtree) {
-        String s = getReferencedSignature(dtree);
-        if (s == null) {
-            return null;
-        }
-        int n = s.indexOf("#");
-        return (n == -1) ? null : s.substring(n + 1);
-    }
-
-    public String getReferencedMemberName(BaseConfiguration c, Element e) {
-        if (e == null) {
-            return null;
-        }
-        return c.utils.isExecutableElement(e)
-                ? c.utils.getSimpleName(e) + c.utils.makeSignature((ExecutableElement) e, true, true)
-                : c.utils.getSimpleName(e);
-    }
-
-    public PackageElement getReferencedPackage(BaseConfiguration c, DocTree dtree) {
-        Element e = getReferencedElement(c, dtree);
-        if (e != null) {
-            return c.utils.containingPackage(e);
-        }
-        return null;
-    }
-
-    public List<? extends DocTree> getFirstSentenceTrees(BaseConfiguration c, List<? extends DocTree> body) {
-        List<DocTree> firstSentence = c.docEnv.getDocTrees().getFirstSentence(body);
-        return firstSentence;
-    }
-
-    public List<? extends DocTree> getFirstSentenceTrees(BaseConfiguration c, DocTree dtree) {
-        return getFirstSentenceTrees(c, getBody(c, dtree));
-    }
-
-    private Element getReferencedElement(BaseConfiguration c, DocTree dtree) {
-        return new SimpleDocTreeVisitor<Element, Void>() {
-            @Override
-            public Element visitSee(SeeTree node, Void p) {
-                for (DocTree dt : node.getReference()) {
-                    return visit(dt, null);
-                }
-                return null;
-            }
-
-            @Override
-            public Element visitLink(LinkTree node, Void p) {
-                return visit(node.getReference(), null);
-            }
-
-            @Override
-            public Element visitProvides(ProvidesTree node, Void p) {
-                return visit(node.getServiceType(), null);
-            }
-
-            @Override
-            public Element visitValue(ValueTree node, Void p) {
-                return visit(node.getReference(), null);
-            }
-
-            @Override
-            public Element visitReference(ReferenceTree node, Void p) {
-                return getElement(c, node);
-            }
-
-            @Override
-            public Element visitSerialField(SerialFieldTree node, Void p) {
-                return visit(node.getType(), null);
-            }
-
-            @Override
-            public Element visitUses(UsesTree node, Void p) {
-                return visit(node.getServiceType(), null);
-            }
-
-            @Override
-            protected Element defaultAction(DocTree node, Void p) {
-               return null;
-            }
-        }.visit(dtree, null);
-    }
-
-    public TypeElement getServiceType(BaseConfiguration c, DocTree dtree) {
-        Element e = getReferencedElement(c, dtree);
-        if (e != null) {
-            return c.utils.isTypeElement(e) ? (TypeElement) e : null;
-        }
-        return null;
-    }
-
-    public  String getReferencedSignature(DocTree dtree) {
-        return new SimpleDocTreeVisitor<String, Void>() {
-            @Override
-            public String visitSee(SeeTree node, Void p) {
-                for (DocTree dt : node.getReference()) {
-                    return visit(dt, null);
-                }
-                return null;
-            }
-
-            @Override
-            public String visitLink(LinkTree node, Void p) {
-                return visit(node.getReference(), null);
-            }
-
-            @Override
-            public String visitValue(ValueTree node, Void p) {
-                return visit(node.getReference(), null);
-            }
-
-            @Override
-            public String visitReference(ReferenceTree node, Void p) {
-                return node.getSignature();
-            }
-
-            @Override
-            public String visitSerialField(SerialFieldTree node, Void p) {
-                return visit(node.getType(), null);
-            }
-
-            @Override
-            protected String defaultAction(DocTree node, Void p) {
-               return null;
-            }
-        }.visit(dtree, null);
     }
 
     public List<? extends DocTree> getReference(DocTree dtree) {
         return dtree.getKind() == SEE ? ((SeeTree)dtree).getReference() : null;
     }
 
-    public ReferenceTree getExceptionName(DocTree dtree) {
-        return (dtree.getKind() == THROWS || dtree.getKind() == EXCEPTION)
-                ? ((ThrowsTree)dtree).getExceptionName()
-                : null;
-    }
-
     public IdentifierTree getName(DocTree dtree) {
-        switch (dtree.getKind()) {
-            case PARAM:
-                return ((ParamTree)dtree).getName();
-            case SERIAL_FIELD:
-                return ((SerialFieldTree)dtree).getName();
-            default:
-                return null;
-            }
+        return switch (dtree.getKind()) {
+            case PARAM -> ((ParamTree) dtree).getName();
+            case SERIAL_FIELD -> ((SerialFieldTree) dtree).getName();
+            default -> null;
+        };
     }
 
-    public List<? extends DocTree> getTags(BaseConfiguration c, DocTree dtree) {
+    public List<? extends DocTree> getTags(DocTree dtree) {
         return new SimpleDocTreeVisitor<List<? extends DocTree>, Void>() {
-            List<? extends DocTree> asList(String content) {
-                List<DocTree> out = new ArrayList<>();
-                out.add((TextTree)c.cmtUtils.makeTextTree(content));
-                return out;
+
+            private List<DocTree> asList(String content) {
+                return List.of(configuration.cmtUtils.makeTextTree(content));
             }
 
             @Override
@@ -574,13 +401,18 @@ public class CommentHelper {
             }
 
             @Override
+            public List<? extends DocTree> visitEscape(EscapeTree node, Void p) {
+                return asList(node.getBody());
+            }
+
+            @Override
             public List<? extends DocTree> visitLiteral(LiteralTree node, Void p) {
                 return asList(node.getBody().getBody());
             }
 
             @Override
             public List<? extends DocTree> visitProvides(ProvidesTree node, Void p) {
-                 return node.getDescription();
+                return node.getDescription();
             }
 
             @Override
@@ -600,7 +432,13 @@ public class CommentHelper {
 
             @Override
             public List<? extends DocTree> visitParam(ParamTree node, Void p) {
-               return node.getDescription();
+                return node.getDescription();
+            }
+
+            @Override
+            public List<? extends DocTree> visitRawText(RawTextTree node, Void p) {
+                // not ideal, but better than returning an empty list
+                return asList(node.getContent());
             }
 
             @Override
@@ -629,8 +467,13 @@ public class CommentHelper {
             }
 
             @Override
+            public List<? extends DocTree> visitSpec(SpecTree node, Void p) {
+                return node.getTitle();
+            }
+
+            @Override
             public List<? extends DocTree> visitThrows(ThrowsTree node, Void p) {
-                 return node.getDescription();
+                return node.getDescription();
             }
 
             @Override
@@ -640,38 +483,60 @@ public class CommentHelper {
 
             @Override
             public List<? extends DocTree> visitUses(UsesTree node, Void p) {
-                 return node.getDescription();
+                return node.getDescription();
             }
 
             @Override
             protected List<? extends DocTree> defaultAction(DocTree node, Void p) {
-               return Collections.emptyList();
+                return List.of();
             }
         }.visit(dtree, null);
     }
 
-    public List<? extends DocTree> getBody(BaseConfiguration c, DocTree dtree) {
-        return getTags(c, dtree);
+    public List<? extends DocTree> getBody(DocTree dtree) {
+        return getTags(dtree);
     }
 
     public ReferenceTree getType(DocTree dtree) {
         if (dtree.getKind() == SERIAL_FIELD) {
-            return ((SerialFieldTree)dtree).getType();
+            return ((SerialFieldTree) dtree).getType();
         } else {
             return null;
         }
     }
 
     public DocTreePath getDocTreePath(DocTree dtree) {
-        if (path == null || dctree == null || dtree == null)
+        if (dcTree == null) {
+            // Element does not have a doc comment.
+            return getInheritedDocTreePath(dtree);
+        }
+        if (path == null || dtree == null) {
             return null;
-        return DocTreePath.getPath(path, dctree, dtree);
+        }
+        DocTreePath dtPath = DocTreePath.getPath(path, dcTree, dtree);
+        // Doc tree isn't in current element's comment, it must be inherited.
+        return dtPath == null ? getInheritedDocTreePath(dtree) : dtPath;
     }
 
-    public Element getOverriddenElement() {
-        return overriddenElement;
+    private DocTreePath getInheritedDocTreePath(DocTree dtree) {
+        Utils utils = configuration.utils;
+        if (element instanceof ExecutableElement ee) {
+            var docFinder = utils.docFinder();
+            Optional<ExecutableElement> inheritedDoc = docFinder.search(ee,
+                    (m -> {
+                        Optional<ExecutableElement> optional = utils.getFullBody(m).isEmpty() ? Optional.empty() : Optional.of(m);
+                        return Result.fromOptional(optional);
+                    })).toOptional();
+            return inheritedDoc.isEmpty() || inheritedDoc.get().equals(ee)
+                    ? null
+                    : utils.getCommentHelper(inheritedDoc.get()).getDocTreePath(dtree);
+        } else if (element instanceof TypeElement te
+                && te.getEnclosingElement() instanceof TypeElement enclType) {
+            // Block tags can be inherited from enclosing types.
+            return utils.getCommentHelper(enclType).getDocTreePath(dtree);
+        }
+        return null;
     }
-
 
     /**
      * For debugging purposes only. Do not rely on this for other things.
@@ -679,20 +544,10 @@ public class CommentHelper {
      */
     @Override
     public String toString() {
-        StringBuilder sb = new StringBuilder("CommentHelper{" + "path=" + path + ", dctree=" + dctree);
-        sb.append(", element=");
-        sb.append(element.getEnclosingElement());
-        sb.append("::");
-        sb.append(element);
-        sb.append(", overriddenElement=");
-        if (overriddenElement != null) {
-            sb.append(overriddenElement.getEnclosingElement());
-            sb.append("::");
-            sb.append(overriddenElement);
-        } else {
-            sb.append("<none>");
-        }
-        sb.append('}');
-        return sb.toString();
+        return "CommentHelper{"
+                + "path=" + path
+                + ", dcTree=" + dcTree
+                + ", element=" + element.getEnclosingElement() + "::" + element
+                + '}';
     }
 }
