@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,12 +22,83 @@
  */
 
 /*
- * @test
- * @bug 8059022
+ * @test id=ZSinglegenDebug
+ * @key randomness
+ * @bug 8059022 8271855
  * @modules java.base/jdk.internal.misc:+open
- * @summary Validate barriers after Unsafe getObject, CAS and swap (GetAndSet)
- * @requires vm.gc.Z & !vm.graal.enabled
- * @run main/othervm -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+UnlockDiagnosticVMOptions -XX:+ZUnmapBadViews -XX:ZCollectionInterval=1 -XX:-CreateCoredumpOnCrash -XX:CompileCommand=dontinline,*::mergeImpl* compiler.gcbarriers.UnsafeIntrinsicsTest
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZSinglegen & vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+ZVerifyOops -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=ZSinglegen
+ * @key randomness
+ * @bug 8059022 8271855
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZSinglegen & !vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=ZGenerationalDebug
+ * @key randomness
+ * @bug 8059022 8271855
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZGenerational & vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+ZVerifyOops -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=ZGenerational
+ * @key randomness
+ * @bug 8059022 8271855
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.ZGenerational & !vm.debug
+ * @library /test/lib
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:ZCollectionInterval=1
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
+ */
+
+/*
+ * @test id=Shenandoah
+ * @key randomness
+ * @bug 8255401 8251944
+ * @modules java.base/jdk.internal.misc:+open
+ * @summary Validate barriers after Unsafe getReference, CAS and swap (GetAndSet)
+ * @requires vm.gc.Shenandoah
+ * @library /test/lib
+ * @run main/othervm -XX:+UseShenandoahGC
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:-CreateCoredumpOnCrash
+ *                   -XX:+ShenandoahVerify
+ *                   -XX:CompileCommand=dontinline,*::mergeImpl*
+ *                   compiler.gcbarriers.UnsafeIntrinsicsTest
  */
 
 package compiler.gcbarriers;
@@ -35,6 +106,7 @@ package compiler.gcbarriers;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Random;
+import jdk.test.lib.Utils;
 import sun.misc.Unsafe;
 
 public class UnsafeIntrinsicsTest {
@@ -75,7 +147,7 @@ public class UnsafeIntrinsicsTest {
 
         // start mutator threads
         ArrayList<Thread> thread_list = new ArrayList<Thread>();
-        Random r = new Random(System.nanoTime());
+        Random r = Utils.getRandomInstance();
         for (int i = 0; i < thread_count; i++) {
 
             setup(); // each thread has its own circle of nodes
@@ -93,7 +165,7 @@ public class UnsafeIntrinsicsTest {
 
         setup(); // All nodes are shared between threads
         ArrayList<Thread> thread_list = new ArrayList<Thread>();
-        Random r = new Random(System.nanoTime());
+        Random r = Utils.getRandomInstance();
         for (int i = 0; i < thread_count; i++) {
             Thread t = new Thread(new Runner(first_node, time, r.nextLong(), optype));
             t.start();
@@ -263,28 +335,29 @@ class Runner implements Runnable {
 
     private Node mergeImplLoad(Node startNode, Node expectedNext, Node head) {
         // Atomic load version
-        Node temp = (Node) UNSAFE.getObject(startNode, offset);
+        Node temp = (Node) UNSAFE.getReference(startNode, offset);
+        UNSAFE.storeFence(); // We need the contents of the published node to be released
         startNode.setNext(head);
         return temp;
     }
 
     private Node mergeImplSwap(Node startNode, Node expectedNext, Node head) {
         // Swap version
-        return (Node) UNSAFE.getAndSetObject(startNode, offset, head);
+        return (Node) UNSAFE.getAndSetReference(startNode, offset, head);
     }
 
     private Node mergeImplCAS(Node startNode, Node expectedNext, Node head) {
         // CAS - should always be true within a single thread - no other thread can have overwritten
-        if (!UNSAFE.compareAndSetObject(startNode, offset, expectedNext, head)) {
-            throw new Error("CAS should always succeed on thread local objects, check you barrier implementation");
+        if (!UNSAFE.compareAndSetReference(startNode, offset, expectedNext, head)) {
+            throw new Error("CAS should always succeed on thread local objects, check your barrier implementation");
         }
         return expectedNext; // continue on old circle
     }
 
     private Node mergeImplCASFail(Node startNode, Node expectedNext, Node head) {
         // Force a fail
-        if (UNSAFE.compareAndSetObject(startNode, offset, "fail", head)) {
-            throw new Error("This CAS should always fail, check you barrier implementation");
+        if (UNSAFE.compareAndSetReference(startNode, offset, "fail", head)) {
+            throw new Error("This CAS should always fail, check your barrier implementation");
         }
         if (startNode.next() != expectedNext) {
             throw new Error("Shouldn't have changed");
@@ -293,17 +366,23 @@ class Runner implements Runnable {
     }
 
     private Node mergeImplWeakCAS(Node startNode, Node expectedNext, Node head) {
-        // Weak CAS - should always be true within a single thread - no other thread can have overwritten
-        if (!UNSAFE.weakCompareAndSetObject(startNode, offset, expectedNext, head)) {
-            throw new Error("Weak CAS should always succeed on thread local objects, check you barrier implementation");
+        // Weak CAS - should almost always be true within a single thread - no other thread can have overwritten
+        // Spurious failures are allowed. So, we retry a couple of times on failure.
+        boolean ok = false;
+        for (int i = 0; i < 3; ++i) {
+            ok = UNSAFE.weakCompareAndSetReference(startNode, offset, expectedNext, head);
+            if (ok) break;
+        }
+        if (!ok) {
+            throw new Error("Weak CAS should almost always succeed on thread local objects, check your barrier implementation");
         }
         return expectedNext; // continue on old circle
     }
 
     private Node mergeImplWeakCASFail(Node startNode, Node expectedNext, Node head) {
         // Force a fail
-        if (UNSAFE.weakCompareAndSetObject(startNode, offset, "fail", head)) {
-            throw new Error("This weak CAS should always fail, check you barrier implementation");
+        if (UNSAFE.weakCompareAndSetReference(startNode, offset, "fail", head)) {
+            throw new Error("This weak CAS should always fail, check your barrier implementation");
         }
         if (startNode.next() != expectedNext) {
             throw new Error("Shouldn't have changed");
@@ -313,15 +392,15 @@ class Runner implements Runnable {
 
     private Node mergeImplCMPX(Node startNode, Node expectedNext, Node head) {
         // CmpX - should always be true within a single thread - no other thread can have overwritten
-        Object res = UNSAFE.compareAndExchangeObject(startNode, offset, expectedNext, head);
+        Object res = UNSAFE.compareAndExchangeReference(startNode, offset, expectedNext, head);
         if (!res.equals(expectedNext)) {
-            throw new Error("Fail CmpX should always succeed on thread local objects, check you barrier implementation");
+            throw new Error("Fail CmpX should always succeed on thread local objects, check your barrier implementation");
         }
         return expectedNext; // continue on old circle
     }
 
     private Node mergeImplCMPXFail(Node startNode, Node expectedNext, Node head) {
-        Object res = UNSAFE.compareAndExchangeObject(startNode, offset, head, head);
+        Object res = UNSAFE.compareAndExchangeReference(startNode, offset, head, head);
         if (startNode.next() != expectedNext) {
             throw new Error("Shouldn't have changed");
         }
