@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
 /*
  * @test ProtectionDomainVerificationTest
  * @bug 8149064
+ * @requires vm.flagless
  * @modules java.base/jdk.internal.misc
  * @library /test/lib
  * @run driver ProtectionDomainVerificationTest
@@ -38,24 +39,42 @@ public class ProtectionDomainVerificationTest {
     public static void main(String... args) throws Exception {
 
         // -Xlog:protectiondomain=trace
-        ProcessBuilder pb = ProcessTools.createJavaProcessBuilder("-Xlog:protectiondomain=trace",
-                                                                  "-Xmx128m",
-                                                                  Hello.class.getName());
-        OutputAnalyzer out = new OutputAnalyzer(pb.start());
-        out.shouldContain("[protectiondomain] Checking package access");
-        out.shouldContain("[protectiondomain] pd set count = #");
+        ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xlog:protectiondomain=trace",
+                                                                             "-Xmx128m",
+                                                                             "-Djava.security.manager=allow",
+                                                                             Hello.class.getName(), "security_manager");
+        new OutputAnalyzer(pb.start())
+        .shouldHaveExitValue(0)
+        .shouldContain("[protectiondomain] Checking package access")
+        .shouldContain("[protectiondomain] adding protection domain that can access class");
 
         // -Xlog:protectiondomain=debug
-        pb = ProcessTools.createJavaProcessBuilder("-Xlog:protectiondomain=debug",
-                                                                  "-Xmx128m",
-                                                                  Hello.class.getName());
-        out = new OutputAnalyzer(pb.start());
-        out.shouldContain("[protectiondomain] Checking package access");
-        out.shouldNotContain("pd set count = #");
+        pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xlog:protectiondomain=debug",
+                                                              "-Xmx128m",
+                                                              "-Djava.security.manager=allow",
+                                                              Hello.class.getName(), "security_manager");
+        new OutputAnalyzer(pb.start())
+        .shouldHaveExitValue(0)
+        .shouldContain("[protectiondomain] Checking package access")
+        .shouldNotContain("[protectiondomain] adding protection domain that can access class");
+
+        // -Xlog:protectiondomain=debug
+        pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Xlog:protectiondomain=trace",
+                                                              "-Xmx128m",
+                                                              "-Djava.security.manager=disallow",
+                                                              Hello.class.getName());
+        new OutputAnalyzer(pb.start())
+        .shouldHaveExitValue(0)
+        .shouldNotContain("[protectiondomain] Checking package access")
+        .shouldNotContain("pd set count = #");
     }
 
     public static class Hello {
         public static void main(String[] args) {
+            if (args.length == 1) {
+              // Need a security manager to trigger logging.
+              System.setSecurityManager(new SecurityManager());
+            }
             System.out.print("Hello!");
         }
     }
