@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,7 +60,10 @@ public class getvalue002 {
     private final static String classToCheckName = prefix + "getvalue002aClassToCheck";
 
     public static void main(String argv[]) {
-        System.exit(95 + run(argv, System.out));
+        int result = run(argv,System.out);
+        if (result != 0) {
+            throw new RuntimeException("TEST FAILED with result " + result);
+        }
     }
 
     public static int run(String argv[], PrintStream out) {
@@ -104,7 +107,7 @@ public class getvalue002 {
         for (int i = 0; i < FIELD_NAME.length; i++) {
             Field field;
             String name = FIELD_NAME[i][0];
-            Integer totalElements = new Integer(FIELD_NAME[i][1]);
+            Integer totalElements = Integer.valueOf(FIELD_NAME[i][1]);
             int lastElementIndex = totalElements.intValue() - 1;
             Value value;
             ArrayReference arrayRef;
