@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -150,7 +150,10 @@ public class isbridge001 {
     private int tot_res = Consts.TEST_PASSED;
 
     public static void main (String argv[]) {
-        System.exit(run(argv, System.out) + Consts.JCK_STATUS_BASE);
+        int result = run(argv,System.out);
+        if (result != 0) {
+            throw new RuntimeException("TEST FAILED with result " + result);
+        }
     }
 
     public static int run(String argv[], PrintStream out) {
@@ -213,7 +216,7 @@ public class isbridge001 {
                         log.complain("TEST BUG: Integer.parseInt: caught " + e);
                         return quitDebuggee();
                     }
-                    boolean bridge = new Boolean(methods[i][idx][2]);
+                    boolean bridge = Boolean.valueOf(methods[i][idx][2]);
                     if (bridge == meth.isBridge())
                         log.display("\tCHECK PASSED: Method.isBridge() returns "
                             + meth.isBridge() + " as expected\n");
