@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,14 +28,12 @@
  * @summary verify that isFullScreenSupported and getFullScreenWindow work
  * correctly with and without a SecurityManager. Note that the test may fail
  * on older Gnome versions (see bug 6500686).
- * @run main FSFrame
- * @run main/othervm -Dsun.java2d.noddraw=true FSFrame
- * @author cheth
+ * @run main/othervm -Djava.security.manager=allow FSFrame
+ * @run main/othervm -Djava.security.manager=allow -Dsun.java2d.noddraw=true FSFrame
  */
 
 import java.awt.*;
 import java.awt.image.*;
-import java.applet.*;
 import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
