@@ -25,7 +25,7 @@
  * @test
  * @bug 6552961 6558429
  * @summary Test privilegedCallable, privilegedCallableUsingCurrentClassLoader
- * @run main/othervm PrivilegedCallables
+ * @run main/othervm -Djava.security.manager=allow PrivilegedCallables
  * @author Martin Buchholz
  */
 
@@ -70,6 +70,8 @@ public class PrivilegedCallables {
     // A Policy class designed to make permissions fiddling very easy.
     //----------------------------------------------------------------
     static class Policy extends java.security.Policy {
+        static final java.security.Policy DEFAULT_POLICY = java.security.Policy.getPolicy();
+
         private Permissions perms;
 
         public void setPermissions(Permission...permissions) {
@@ -89,7 +91,7 @@ public class PrivilegedCallables {
         }
 
         public boolean implies(ProtectionDomain pd, Permission p) {
-            return perms.implies(p);
+            return perms.implies(p) || DEFAULT_POLICY.implies(pd, p);
         }
 
         public void refresh() {}
