@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -47,7 +47,7 @@ import java.util.logging.LogManager;
  * @bug 8025690
  * @summary tests that an empty or null pattern always result in an exception.
  * @run main/othervm FileHandlerPatternExceptions UNSECURE
- * @run main/othervm FileHandlerPatternExceptions SECURE
+ * @run main/othervm -Djava.security.manager=allow FileHandlerPatternExceptions SECURE
  * @author danielfuchs
  * @key randomness
  */
@@ -294,6 +294,8 @@ public class FileHandlerPatternExceptions {
 
     public static class SimplePolicy extends Policy {
 
+        static final Policy DEFAULT_POLICY = Policy.getPolicy();
+
         final Permissions permissions;
         final Permissions allPermissions;
         final AtomicBoolean allowAll;
@@ -313,7 +315,7 @@ public class FileHandlerPatternExceptions {
         @Override
         public boolean implies(ProtectionDomain domain, Permission permission) {
             if (allowAll.get()) return allPermissions.implies(permission);
-            return permissions.implies(permission);
+            return permissions.implies(permission) || DEFAULT_POLICY.implies(domain, permission);
         }
 
         @Override
