@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -79,16 +77,16 @@ public class TestRecordedFullStackTrace {
     private static void assertStackTraces(RecurseThread[] threads) throws Throwable {
         Path path = null;
         do {
-            Recording recording = new Recording();
-            recording.enable(EVENT_NAME).withPeriod(Duration.ofMillis(50));
-            recording.start();
-            Thread.sleep(500);
-            recording.stop();
-            // Dump the recording to a file
-            path = Utils.createTempFile("execution-stack-trace", ".jfr");
-            System.out.println("Dumping to " + path);
-            recording.dump(path);
-            recording.close();
+            try (Recording recording = new Recording()) {
+                recording.enable(EVENT_NAME).withPeriod(Duration.ofMillis(1));
+                recording.start();
+                Thread.sleep(50);
+                recording.stop();
+                // Dump the recording to a file
+                path = Utils.createTempFile("execution-stack-trace", ".jfr");
+                System.out.println("Dumping to " + path);
+                recording.dump(path);
+            }
         } while (!hasValidStackTraces(path, threads));
     }
 
@@ -103,8 +101,7 @@ public class TestRecordedFullStackTrace {
             for (int threadIndex = 0; threadIndex < threads.length; ++threadIndex) {
                 RecurseThread currThread = threads[threadIndex];
                 if (threadId == currThread.getId()) {
-                    System.out.println("ThreadName=" + currThread.getName() + ", depth=" + currThread.totalDepth);
-                    Asserts.assertEquals(threadName, currThread.getName(), "Wrong thread name");
+                    Asserts.assertEquals(threadName, currThread.getName(), "Wrong thread name, deptth=" + currThread.totalDepth);
                     if ("recurseEnd".equals(getTopMethodName(event))) {
                         isEventFound[threadIndex] = true;
                         checkEvent(event, currThread.totalDepth);
@@ -122,7 +119,7 @@ public class TestRecordedFullStackTrace {
             if (!isEventFound[i]) {
                // no assertion, let's retry.
                 // Could be race condition, i.e safe point during Thread.sleep
-                System.out.println("Falied to validate all threads, will retry.");
+                System.out.println("Failed to validate all threads, will retry.");
                 return false;
             }
         }
@@ -147,15 +144,14 @@ public class TestRecordedFullStackTrace {
             for (int i = 0; i < frames.size(); ++i) {
                 String name = frames.get(i).getMethod().getName();
                 String expectedName = expectedMethods.get(i);
-                System.out.printf("method[%d]=%s, expected=%s%n", i, name, expectedName);
-                Asserts.assertEquals(name, expectedName, "Wrong method name");
+                Asserts.assertEquals(name, expectedName, "Wrong method name at index " + i);
             }
 
             boolean isTruncated = stacktrace.isTruncated();
             boolean isTruncateExpected = expectedDepth > MAX_DEPTH;
             Asserts.assertEquals(isTruncated, isTruncateExpected, "Wrong value for isTruncated. Expected:" + isTruncateExpected);
 
-            String firstMethod = frames.get(frames.size() - 1).getMethod().getName();
+            String firstMethod = frames.getLast().getMethod().getName();
             boolean isFullTrace = "run".equals(firstMethod);
             String msg = String.format("Wrong values for isTruncated=%b, isFullTrace=%b", isTruncated, isFullTrace);
             Asserts.assertTrue(isTruncated != isFullTrace, msg);
