@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -60,7 +58,7 @@ public class TestSnapshot {
                 r.close();
                 FlightRecorderMXBean mxBean = JmxHelper.getFlighteRecorderMXBean();
                 List<RecordingInfo> recs = mxBean.getRecordings();
-                JmxHelper.verifyEquals(recs.get(0), snapshot);
+                JmxHelper.verifyEquals(recs.getFirst(), snapshot);
             }
         }
     }
@@ -69,7 +67,7 @@ public class TestSnapshot {
         try (Recording snapshot = FlightRecorder.getFlightRecorder().takeSnapshot()) {
             FlightRecorderMXBean mxBean = JmxHelper.getFlighteRecorderMXBean();
             List<RecordingInfo> recs = mxBean.getRecordings();
-            JmxHelper.verifyEquals(recs.get(0), snapshot);
+            JmxHelper.verifyEquals(recs.getFirst(), snapshot);
         }
     }
 }
